--- a/MYMC/Windows/MainWindow.xaml
+++ b/MYMC/Windows/MainWindow.xaml
@@ -1,12 +1,45 @@
 ﻿<mah:MetroWindow x:Class="MYMC.Windows.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+                 xmlns:viewmodel="clr-namespace:MYMC.ViewModels"
+                 xmlns:converters="clr-namespace:MYMC.Converters"
+                 d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
+                 xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+                 Loaded="MainWindow_OnLoaded"
+                 mc:Ignorable="d"
+                 Title="MainWindow" Height="450" Width="800">
+    <mah:MetroWindow.Resources>
+        <converters:FractionConverter x:Key="FractionConverter"></converters:FractionConverter>
+    </mah:MetroWindow.Resources>
+    <DockPanel LastChildFill="True">
 
-    </Grid>
+        <StatusBar DockPanel.Dock="Bottom" x:Name="StatusBar">
+            <StatusBarItem Content="{Binding StatusText}"
+                           Width="{Binding ElementName=StatusBar, Path=ActualWidth, Converter={StaticResource FractionConverter}, ConverterParameter=0.2}"/>
+            <Separator Foreground="{DynamicResource MahApps.Brushes.Badged.Foreground}" />
+            <mah:MetroProgressBar IsIndeterminate="True"
+                                  Foreground="{DynamicResource MahApps.Brushes.Badged.Foreground}"
+                                  Height="15"
+                                  Width="{Binding ElementName=StatusBar, Path=ActualWidth, Converter={StaticResource FractionConverter}, ConverterParameter=0.75}"
+                                  Visibility="{Binding IsBusy, 
+            Converter={StaticResource BooleanToVisibilityConverter}}" />
+        </StatusBar>
+
+        <Grid DockPanel.Dock="Top">
+            <wv2:WebView2 x:Name="WebView">
+                <behaviors:Interaction.Triggers>
+                    <behaviors:EventTrigger EventName="NavigationCompleted">
+                        <behaviors:InvokeCommandAction Command="{Binding NavigationCompletedCommand}" />
+                    </behaviors:EventTrigger>
+                    <behaviors:EventTrigger EventName="NavigationStartingCommand">
+                        <behaviors:InvokeCommandAction Command="{Binding NavigationStartingCommand}" />
+                    </behaviors:EventTrigger>
+                </behaviors:Interaction.Triggers>
+            </wv2:WebView2>
+        </Grid>
+    </DockPanel>
 </mah:MetroWindow>
