--- a/MYMC/Windows/MainWindow.xaml
+++ b/MYMC/Windows/MainWindow.xaml
@@ -14,8 +14,8 @@
                  mc:Ignorable="d"
                  Title="MainWindow" Height="450" Width="800">
     <mah:MetroWindow.Resources>
-        <converters:FractionConverter x:Key="FractionConverter"></converters:FractionConverter>
-        <converters:PlaybackStateToIconConverter x:Key="PlaybackStateToIconConverter"></converters:PlaybackStateToIconConverter>
+        <converters:FractionConverter x:Key="FractionConverter" />
+        <converters:PlaybackStateToIconConverter x:Key="PlaybackStateToIconConverter" />
     </mah:MetroWindow.Resources>
     <DockPanel LastChildFill="True">
 
@@ -32,19 +32,35 @@
         </StatusBar>
         
         <Grid DockPanel.Dock="Bottom" Height="100">
-            <Button Style="{StaticResource MahApps.Styles.Button.Circle}"
-                    Command="{Binding TogglePlaybackCommand}"
-                    Width="48" 
-                    Height="48">
-                <iconpacks:PackIconMaterial HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <iconpacks:PackIconMaterial.Kind>
-                        <MultiBinding Mode="OneWay" Converter="{StaticResource PlaybackStateToIconConverter}">
-                            <Binding Path="IsBusy" />
-                            <Binding Path="IsPlaying" />
-                        </MultiBinding>
-                    </iconpacks:PackIconMaterial.Kind>
-                </iconpacks:PackIconMaterial>
-            </Button>
+            <StackPanel Orientation="Horizontal">
+                <Button Style="{StaticResource MahApps.Styles.Button.Circle}"
+                        Command="{Binding PreviousCommand}"
+                        Width="36"
+                        Height="36">
+                    <iconpacks:PackIconMaterial HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                Kind="SkipPreviousOutline" />
+                </Button>
+                <Button Style="{StaticResource MahApps.Styles.Button.Circle}"
+                        Command="{Binding TogglePlaybackCommand}"
+                        Width="48" 
+                        Height="48">
+                    <iconpacks:PackIconMaterial HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <iconpacks:PackIconMaterial.Kind>
+                            <MultiBinding Mode="OneWay" Converter="{StaticResource PlaybackStateToIconConverter}">
+                                <Binding Path="IsBusy" />
+                                <Binding Path="IsPlaying" />
+                            </MultiBinding>
+                        </iconpacks:PackIconMaterial.Kind>
+                    </iconpacks:PackIconMaterial>
+                </Button>
+                <Button Style="{StaticResource MahApps.Styles.Button.Circle}"
+                        Command="{Binding NextCommand}"
+                        Width="36"
+                        Height="36">
+                    <iconpacks:PackIconMaterial HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                Kind="SkipNextOutline" />
+                </Button>
+            </StackPanel>
         </Grid>
 
         <Grid DockPanel.Dock="Top">
