--- a/MYMC/Windows/LyricsWindow.xaml
+++ b/MYMC/Windows/LyricsWindow.xaml
@@ -1,12 +1,56 @@
-﻿<Window x:Class="MYMC.Windows.LyricsWindow"
+﻿<mah:MetroWindow x:Class="MYMC.Windows.LyricsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:MYMC.Windows"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:behaviors="clr-namespace:Microsoft.Xaml.Behaviors;assembly=Microsoft.Xaml.Behaviors"
+        xmlns:viewmodel="clr-namespace:MYMC.ViewModels"
+        xmlns:converters="clr-namespace:MYMC.Converters"
+        d:DataContext="{d:DesignInstance Type=viewmodel:LyricsViewModel}"
         mc:Ignorable="d"
-        Title="LyricsWindow" Height="450" Width="800">
+        ShowMinButton="False"
+        Title="{Binding LyricsResult.Title, FallbackValue='Lyrics'}" Height="450" Width="800">
+    <mah:MetroWindow.Resources>
+        <converters:LyricsResultTypeToStringConverter x:Key="LyricsResultTypeToStringConverter"></converters:LyricsResultTypeToStringConverter>
+    </mah:MetroWindow.Resources>
+    <behaviors:Interaction.Triggers>
+        <behaviors:EventTrigger EventName="ContentRendered">
+            <behaviors:InvokeCommandAction Command="{Binding GetLyricsCommand}"></behaviors:InvokeCommandAction>
+        </behaviors:EventTrigger>
+    </behaviors:Interaction.Triggers>
     <Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding LyricsResult.ResultType, Converter={StaticResource LyricsResultTypeToStringConverter}}" VerticalAlignment="Center" Margin="2" FontStyle="Italic" FontSize="14"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Title:" VerticalAlignment="Center" Margin="2" FontWeight="Bold" FontSize="16"/>
+            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding LyricsResult.Title}" VerticalAlignment="Center" Margin="2" FontSize="16"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Artist:" VerticalAlignment="Center" Margin="2" FontWeight="Bold" FontSize="16" />
+            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LyricsResult.ArtistName}" VerticalAlignment="Center" Margin="2" FontSize="16"/>
+
+            <ScrollViewer Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
+                <TextBox Text="{Binding LyricsResult.Lyrics}" TextWrapping="Wrap" Margin="5" IsReadOnly="True" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" mah:TextBoxHelper.Watermark="No Lyrics Found"/>
+            </ScrollViewer>
+
+            <UniformGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Columns="2">
+                <Button Content="Open in Genius" Command="{Binding OpenInGeniusCommand}" Margin="5"/>
+                <Button Content="Open in Google" Command="{Binding OpenInGoogleSearchCommand}" Margin="5"/>
+            </UniformGrid>
+        </Grid>
         
+        <mah:ProgressRing IsLarge="True" 
+                          IsActive="{Binding IsBusy}" 
+                          Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
-</Window>
+</mah:MetroWindow>
